objects/ADMTerritoryCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <label>Hierarchy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level1TerritoryName__c</fullName>
        <label>Level1TerritoryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Code__c</fullName>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ADMTerritoryCode</label>
</CustomObject>